fix: fix masonry style for shared wishes
Shared wishes were not centered anymore.

--- a/src/app/wish-lists/shared-wish-list/shared-wish-list.page.scss
+++ b/src/app/wish-lists/shared-wish-list/shared-wish-list.page.scss
@@ -56,21 +56,21 @@ ion-toolbar {
 }
 
 @media (min-width: 1200px) {
-    ion-grid {
+    div.grid-centered {
         margin-right: 10%;
         margin-left: 10%;
     }
 }
 
 @media (min-width: 1800px) {
-    ion-grid {
+    div.grid-centered {
         margin-right: 15%;
         margin-left: 15%;
     }
 }
 
 @media (min-width: 2400px) {
-    ion-grid {
+    div.grid-centered {
         margin-right: 20%;
         margin-left: 20%;
     }
